[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lovon"
version = "0.1"
description = "Hardware Navigation System with LOVON Agent"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "ultralytics",
    "opencv-python",
    "transformers",
    "numpy",
    "networkx",
    "pyvis",
    "rosmaster_lib @ git+https://github.com/DaojiePENG/rosmaster_lib.git",
    "ipywidgets",

]

[tool.setuptools]
packages = ["lovon"]
include-package-data = true

[tool.setuptools.package-data]
lovon = [
    "models_cxn_025/**/*",
    "yolo-models/*"
]